--- a/README.org
+++ b/README.org
@@ -241,6 +241,8 @@ By creating a glossary or "concept map", we create a central place for understan
 - auto-testing : by having multiple ways to solve for the same thing, a test suite can be automatically run to make sure each way returns the same result
   - eg. if there are multiple way to compute the same value, they can all be computed and compared to each other for validation
 ** Usage
+The library is available on [[https://clojars.org/outfn][clojars]], just add ~[outfn "0.1.0"]~ to your ~project.clj~.
+
 Declaring an outfn is of the form:
 #+BEGIN_SRC clojure
    (defoutfn $NAME $PARAMS
